--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div>
 			<img src="images/photo.jpg" class="img" alt="Это я" width="350" height="350">
 		</div>
-		<div>
+		<div class="selected">
 			<h1 class="title">Ковалев Антон Игоревич</h1>
 			<div>
 				<h2 class="subtitle" id="aboutme">Обо мне</h2>
